src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__byte__byte_length_bytes.snap
---
source: src/expr/src/scalar/func/impls/byte.rs
expression: "#[sqlfunc(sqlname = \"octet_length\")]\nfn byte_length_bytes<'a>(a: &'a [u8]) -> Result<i32, EvalError> {\n    let val = a.len();\n    i32::try_from(val)\n        .or_else(|_| Err(EvalError::Int32OutOfRange(val.to_string().into())))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct ByteLengthBytes;
impl crate::func::EagerUnaryFunc for ByteLengthBytes {
    type Input<'a> = &'a [u8];
    type Output<'a> = Result<i32, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        byte_length_bytes(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for ByteLengthBytes {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("octet_length")
    }
}
fn byte_length_bytes<'a>(a: &'a [u8]) -> Result<i32, EvalError> {
    let val = a.len();
    i32::try_from(val)
        .or_else(|_| Err(EvalError::Int32OutOfRange(val.to_string().into())))
}
