src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__byte__seahash_bytes.snap
---
source: src/expr/src/scalar/func/impls/byte.rs
expression: "#[sqlfunc(sqlname = \"seahash_bytes\")]\nfn seahash_bytes<'a>(a: &'a [u8]) -> u64 {\n    seahash::hash(a)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct SeahashBytes;
impl crate::func::EagerUnaryFunc for SeahashBytes {
    type Input<'a> = &'a [u8];
    type Output<'a> = u64;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        seahash_bytes(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for SeahashBytes {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("seahash_bytes")
    }
}
fn seahash_bytes<'a>(a: &'a [u8]) -> u64 {
    seahash::hash(a)
}
